# TI_MSPM0G3507

./: .gitignore  README.md  note.md
.theia/: launch.json
01_LED/: empty.syscfg
01_LED/bsp/: Delay.h
02_GPIO/: empty.syscfg  main.c
02_GPIO/User/Bsp/: Delay.c
03_OLED/: main.c
03_OLED/User/Bsp/: oled.c  oled.h
04_Serial/: empty.syscfg  main.c
04_Serial/User/Bsp/: Delay.c  Serial.h
06_uart/: empty.syscfg  main.c
STM32F103RCT6/provincial_firstprize/: .mxproject  CMakeLists.txt  README.md  provincial_firstprize.ioc
STM32F103RCT6/provincial_firstprize/Core/Inc/: main.h  stm32f1xx_it.h
STM32F103RCT6/provincial_firstprize/Core/Src/: dma.c  freertos.c  gpio.c  i2c.c  main.c  spi.c  stm32f1xx_it.c  tim.c
STM32F103RCT6/provincial_firstprize/User/App/: app_chassis.c  app_chassis.h  app_icm45686.c  app_icm45686.h  app_line_follow.c  app_line_follow.h  app_race_config.c  app_race_config.h  icm45686_port.c  icm45686_port.h
STM32F103RCT6/provincial_firstprize/User/App/task/: chassis_task.c  chassis_task.h  control_task.c  control_task.h  imu_task.c  imu_task.h  line_follow_task.c  line_follow_task.h
STM32F103RCT6/provincial_firstprize/User/Bsp/: board_config.h  bsp_buzzer.c  bsp_buzzer.h  bsp_encoder.c  bsp_encoder.h  bsp_icm45686.c  bsp_icm45686.h  bsp_key.c  bsp_key.h  bsp_led.c  bsp_led.h  bsp_line_sensor.c  bsp_line_sensor.h  bsp_oled.c  bsp_tb6612.c  bsp_tb6612.h
STM32F103RCT6/provincial_firstprize/User/Lib/: lib_adaptive_mahony.c  lib_adaptive_mahony.h  lib_attitude.c  lib_attitude.h  lib_kalman.c  lib_pid.h  lib_rate_filter.c  lib_rate_filter.h
STM32F103RCT6/provincial_firstprize/User/Module/: module_buzzer.c  module_buzzer.h  module_icm45686.c  module_icm45686.h  module_key.c  module_key.h  module_led.c  module_led.h  module_motor.c  module_motor.h  module_pid.c  module_pid.h  module_tracker.c  module_tracker.h
STM32F103RCT6/provincial_firstprize/cmake/stm32cubemx/: CMakeLists.txt
User/bsp/: Delay.c  Delay.h  oled.c
imu/app/: app_icm45686.c  app_icm45686.h  icm45686_port.c  icm45686_port.h
imu/bsp/: bsp_icm45686.c
imu/lib/: lib_attitude.c
imu/module/: module_icm45686.c  module_icm45686.h
model/: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Debug.md  README.md  TUNING_GUIDE_CN.md  build_firmware.bat  empty.syscfg  main.c
model/User/App/: FreeRTOSConfig.h  app_chassis.c  app_chassis.h  app_freertos.c  app_freertos.h  app_icm45686.h  app_line_follow.c  app_mpu6050.c  app_mpu6050.h  app_race_config.c  app_race_config.h
model/User/App/task/: chassis_task.c  control_task.c  control_task.h  imu_task.c  line_follow_task.c  line_follow_task.h
model/User/Bsp/: Delay.c  Delay.h  board_config.h  bsp_buzzer.c  bsp_buzzer.h  bsp_delay.c  bsp_encoder.c  bsp_encoder.h  bsp_i2c.c  bsp_i2c.h  bsp_icm45686.c  bsp_icm45686.h  bsp_key.c  bsp_key.h  bsp_led.c  bsp_led.h  bsp_line_sensor.c  bsp_line_sensor.h  bsp_mpu6050.c  bsp_mpu6050.h  bsp_mspm0_hal_compat.c  bsp_oled.c  bsp_oled.h  bsp_oled_data.c  bsp_oled_data.h  bsp_oled_soft_i2c.c  bsp_oled_soft_i2c.h  bsp_tb6612.c  bsp_tb6612.h  i2c.h  main.h  spi.h  stm32f1xx_hal.h  tim.h
model/User/Lib/: lib_attitude.c  lib_imu_types.h  lib_kalman.h  lib_pid.c  lib_rate_filter.c
model/User/Module/: MPU6050.c  MPU6050.h  module_buzzer.h  module_icm45686.h  module_tracker.c
model/cmake/toolchains/: tiarmclang-mspm0.cmake
studylib/01_LED/: main.c
studylib/03_OLED/: empty.syscfg  main.c
studylib/04_Serial/: main.c
studylib/04_Serial/User/Bsp/: Delay.h  Serial.c
studylib/05_KEY_ADC/: empty.syscfg  main.c
studylib/uart_echo_interrupts_standby_LP_MSPM0G3507_nortos_ticlang/: uart_echo_interrupts_standby.c
